src/objects/Live_Session__c.object
<CustomObject>
    <fields>
        <fullName>Hash__c</fullName>
        <label>Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Seeker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Seeker</label>
        <referenceTo>Job_Seeker__c</referenceTo>
        <relationshipLabel>Live Sessions</relationshipLabel>
        <relationshipName>Live_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1_Marketable_Attribute__c</fullName>
        <label>1 Marketable Attribute</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2_Marketable_Attribute__c</fullName>
        <label>2 Marketable Attribute</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X3_Marketable_Attribute__c</fullName>
        <label>3 Marketable Attribute</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Live Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LS{000000}</displayFormat>
        <label>Live Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Live Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>